--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Microservices/CommentsWebApi/CommentsWebApi/appsettings.json
+/Microservices/DogInfoWebApi/WebApi/appsettings.json
