--- a/Microservices/DogInfoWebApi/Domain/Domain.csproj
+++ b/Microservices/DogInfoWebApi/Domain/Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
 </Project>
