--- a/Microservices/DogInfoWebApi/WebApi/WebApi.csproj
+++ b/Microservices/DogInfoWebApi/WebApi/WebApi.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\ImageDTOs\" />
+    <Folder Include="StaticFiles\Images\" />
   </ItemGroup>
 
 </Project>
