--- a/Microservices/CommentsWebApi/CommentsWebApi/CommentsWebApi.csproj
+++ b/Microservices/CommentsWebApi/CommentsWebApi/CommentsWebApi.csproj
@@ -2,6 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<UserSecretsId>fc13be14-79e1-4215-94c1-32335f3ac699</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -17,6 +19,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
 		<PackageReference Include="Scrutor" Version="4.2.0" />
 		<PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
