--- a/Microservices/CommentsWebApi/CommentsWebApi/Properties/launchSettings.json
+++ b/Microservices/CommentsWebApi/CommentsWebApi/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -7,25 +8,33 @@
       "sslPort": 44311
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CommentsDbConnectionString": "User ID=postgres;Password=1234567890;Server=localhost;Port=5432;Database=CommentsDb;Pooling=true;"
       }
     },
     "CommentsWebApi": {
       "commandName": "Project",
-      "launchBrowser": false,
       "launchUrl": "swagger",
+      "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CommentsDbConnectionString": "User ID=postgres;Password=1234567890;Server=localhost;Port=5432;Database=CommentsDb;Pooling=true;"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5002;http://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
